--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,18 @@ services:
   backend:
     build: ./backend
     container_name: backend
+    hostname: backend
     ports:
       - "5000:5000"
     expose:
-      - "5000" 
+      - "5000"
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/hello"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   frontend:
     build:
@@ -22,6 +28,7 @@ services:
   nginx:
     build: ./nginx
     container_name: nginx
+    hostname: nginx
     ports:
       - "80:80"
     depends_on:
@@ -32,4 +39,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
