--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ http {
         listen 80;
 
         location /api/ {
-            proxy_pass http://backend:5000/api/;
+            proxy_pass http://backend:5000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
